--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/Semporchothi-s/e-commerce-server#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.3",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0"
   }
 }
